# mcp-ai-agent

./: .env.example  .gitignore  README.md  aiops_log_analyzer.sh  pyproject.toml  requirements.txt  setup_example.py
docs/: ARCHITECTURE.md  EXAMPLES.md
src/: cli.py
src/agents/: base_agent.py  monitoring_agent.py  operations_agent.py
src/mcp/: server.py
src/security/: risk_assessor.py
src/tools/: extended_tools.py
src/utils/: config.py
